test/fixtures/vm/vm_dont_display_syntax_error.snapshot
beginning
middle
test.vm:1
var 5;
    ^

SyntaxError: Unexpected number
    at new Script (node:vm:*)
    at createScript (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*fixtures*vm*vm_dont_display_syntax_error.js:41:4)

Node.js *
